Fixed footer alignment

--- a/Style/footer.css
+++ b/Style/footer.css
@@ -123,6 +123,7 @@
     .company-footer .list-items {
         flex-wrap: wrap;
         font-size: 14px;
+        justify-content: space-around;
     }
     .site-footer{
        
@@ -181,6 +182,7 @@
     color: #ffffff85;
     transition: 0.2s all ease;
 }
+
 .copy-right-wrapper p:hover{
     font-size: 12px;
     color: #fff;
